--- a/Rachel_assignment_notebook.ipynb
+++ b/Rachel_assignment_notebook.ipynb
@@ -4673,7 +4673,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: remove the empty values from the manufacturer contries clean\n",
+        "# AI prompt: remove the empty values from the manufacturer contries clean\n",
         "\n",
         "df = df[df['manufacturer_countries_cleaned'] != '']\n",
         "manufacturer_countries_counts = df['manufacturer_countries_cleaned'].value_counts()\n",
