--- a/Rachel_computer_vision.ipynb
+++ b/Rachel_computer_vision.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "FjTA-xiCTvi4"
       },
@@ -77,7 +77,7 @@
         "id": "VSfhlyxwT-u3",
         "outputId": "76fc5e31-518e-44db-b87e-5aab2f2975b8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "UJ0MLYQSTvi4",
         "outputId": "a15609d7-5974-4fc7-d021-e553c7cdc83f",
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "usSB_ccoTvi5"
       },
@@ -395,9 +395,9 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "reload = 1 # Control the way data loads\n",
+        "reload = 1\n",
         "\n",
-        "if reload == 1:  # If reload is 1, do the reshaping process\n",
+        "if reload == 1:\n",
         "    Z_train = []\n",
         "    for i in range(60000):\n",
         "        row = X_train[i].reshape((1,784)) # Turn the matrix for i into a row vector of features\n",
@@ -406,12 +406,12 @@
         "    Z_train.to_csv('Z_train.csv')\n",
         "    #\n",
         "    Z_test = []\n",
-        "    for i in range(len(y_test)):\n",
+        "    for i in range(len(10000)):\n",
         "        row = X_test[i].reshape((1,784)) # Turn the matrix for i into a row vector of features\n",
         "        Z_test.append(row[0]) # Append the row vector to the list\n",
         "    Z_test = pd.DataFrame(Z_test)\n",
         "    Z_test.to_csv('Z_test.csv')\n",
-        "else: # If reload is not 1, just load the reshaped data\n",
+        "else:\n",
         "    Z_train = pd.read_csv('Z_train.csv')\n",
         "    Z_test = pd.read_csv('Z_test.csv')\n"
       ]
@@ -427,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "i4dP4AHqTvi5",
         "outputId": "ebbf7f5a-5fea-41f4-bf13-6c3752188b10",
@@ -467,7 +467,7 @@
         "    knn = KNeighborsClassifier(n_neighbors=k+1)\n",
         "    predictor = knn.fit(Z_train.values,y_train)\n",
         "    #y_hat = predictor.predict(Z_test.values)\n",
-        "    accuracy[k] = knn.score(Z_test.values,y_test) # Bug in sklearn requires .values\n",
+        "    accuracy[k] = knn.score(Z_test.values,y_test)\n",
         "\n",
         "accuracy_max = np.max(accuracy) # highest recorded accuracy\n",
         "max_index = np.where(accuracy==accuracy_max)\n",
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "_GLY0194Tvi5",
         "outputId": "94786e14-8a58-444f-b3e4-6a1316b2d8d3",
@@ -930,7 +930,7 @@
         "predictor = knn.fit(Z_train.values,y_train)\n",
         "y_hat = predictor.predict(Z_test.values)\n",
         "\n",
-        "accuracy = knn.score(Z_test.values,y_test) # Bug in sklearn requires .values\n",
+        "accuracy = knn.score(Z_test.values,y_test)\n",
         "print('Accuracy: ', accuracy)\n",
         "\n",
         "pd.crosstab(y_test, y_hat)\n"
